crates/fxrank-lang-ts/tests/snapshots/react__snapshot_react_fixtures@counter.snap
---
source: crates/fxrank-lang-ts/tests/react.rs
expression: snapshot
---
[
  {
    "async_boundary": false,
    "await_count": 0,
    "confidence": 0.6,
    "effects": [
      {
        "class": 1,
        "discounted_to": null,
        "hidden": false,
        "kind": "state.transition",
        "subreason": "useState",
        "tier": "heuristic"
      }
    ],
    "max_class": 1,
    "own_score": 1.0,
    "risk_features": [],
    "risk_weight": 0,
    "symbol": "Counter"
  }
]
